--- a/application/admin/view/order/agree.html
+++ b/application/admin/view/order/agree.html
@@ -4,7 +4,7 @@
     <label class="control-label col-xs-12 col-sm-2">{:__('打款凭证')}:</label>
     <div class="col-xs-12 col-sm-8">
       <div class="input-group">
-        <input id="c-payment_voucher" class="form-control" size="50" name="row[payment_voucher]" type="text">
+        <input id="c-payment_voucher" class="form-control" size="50" name="row[payment_voucher]" type="text" data-rule="required">
         <div class="input-group-addon no-border no-padding">
           <span><button type="button" id="faupload-payment_voucher" class="btn btn-danger faupload" data-input-id="c-payment_voucher" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp,image/webp" data-multiple="false" data-preview-id="p-payment_voucher"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
           <span><button type="button" id="fachoose-payment_voucher" class="btn btn-primary fachoose" data-input-id="c-payment_voucher" data-mimetype="image/*" data-multiple="false"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
