--- a/application/admin/view/auth/admin/add.html
+++ b/application/admin/view/auth/admin/add.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Group')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:build_select('group[]', $groupdata, null, ['class'=>'form-control selectpicker', 'multiple'=>'', 'data-rule'=>'required'])}
+            {:build_select('group[]', $groupdata, null, ['class'=>'form-control selectpicker', 'data-rule'=>'required'])}
         </div>
     </div>
     <div class="form-group">
@@ -34,6 +34,12 @@
         <label for="password" class="control-label col-xs-12 col-sm-2">{:__('Password')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input type="password" class="form-control" id="password" name="row[password]" autocomplete="new-password" value="" data-rule="required;password" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="entrust_rate" class="control-label col-xs-12 col-sm-2">{:__('委托佣金')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input type="text" class="form-control" id="entrust_rate" name="row[entrust_rate]" value=""  />
         </div>
     </div>
     <div class="form-group">
