--- a/application/admin/view/dashboard/index.html
+++ b/application/admin/view/dashboard/index.html
@@ -199,7 +199,7 @@
                             </div>
                         </div>
                     </div>
-                    {neq name="admin_id" value="1"}{/neq}
+                    {neq name="admin_id" value="1"}
                     <div class="col-sm-3 col-xs-6">
                         <div class="sm-st clearfix">
                             <span class="sm-st-icon st-green"><i class="fa fa-user"></i></span>
@@ -209,6 +209,8 @@
                             </div>
                         </div>
                     </div>
+                    {/neq}
+
                 </div>
 
 
