--- a/application/admin/view/dashboard/index.html
+++ b/application/admin/view/dashboard/index.html
@@ -161,9 +161,9 @@
 </style>
 <div class="panel panel-default panel-intro">
     <div class="panel-heading">
-        {:build_heading(null, false)}
+<!--        {:build_heading(null, false)}-->
         <ul class="nav nav-tabs">
-            <li class="active"><a href="#one" data-toggle="tab">{:__('Dashboard')}</a></li>
+<!--            <li class="active"><a href="#one" data-toggle="tab">{:__('Dashboard')}</a></li>-->
 <!--            <li><a href="#two" data-toggle="tab">{:__('Custom')}</a></li>-->
         </ul>
     </div>
